# vmux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
.claude/: settings.local.json
.cursor/rules/: cargo-check.mdc  rust-module-files.mdc  tailwind.mdc
.github/workflows/: ci.yml  deploy-website.yml  release.yml
crates/vmux/: Cargo.toml
crates/vmux_browser/: Cargo.toml
crates/vmux_command/: Cargo.toml
crates/vmux_command_bar/: Cargo.toml  build.rs
crates/vmux_core/: Cargo.toml
crates/vmux_desktop/: Cargo.toml
crates/vmux_desktop_next/: Cargo.toml
crates/vmux_footer/: Cargo.toml  Dioxus.toml  build.rs
crates/vmux_header/: Cargo.toml  Dioxus.toml  build.rs
crates/vmux_history/: .gitignore  Cargo.toml  build.rs  tailwind.config.js
crates/vmux_history_poc/: Cargo.toml  Dioxus.toml  build.rs
crates/vmux_history_poc/assets/: index.html  input.css
crates/vmux_history_poc/examples/: history.rs
crates/vmux_history_poc/src/: app.rs  bridge.rs  lib.rs  main.rs  plugin.rs
crates/vmux_input/: Cargo.toml
crates/vmux_input/src/: cef_keyboard_target.rs  component.rs  input_map.rs  lib.rs  system.rs
crates/vmux_layout/: Cargo.toml  Dioxus.toml  build.rs
crates/vmux_scene/: Cargo.toml
crates/vmux_server/: Cargo.toml
crates/vmux_settings/: Cargo.toml  settings.ron
crates/vmux_status_bar/: Cargo.toml  Dioxus.toml  README.md  build.rs
crates/vmux_terminal/: Cargo.toml  build.rs
crates/vmux_ui/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  package.json  tailwind.config.js  tailwind.preset.js
crates/vmux_utils/: Cargo.toml
crates/vmux_webview/: Cargo.toml
crates/vmux_webview_app/: Cargo.toml
docs/: TODO.md  architecture.md
docs/plans/: 2025-07-25-path-navigator.md  (+6 more)
examples/: Cargo.toml  history.rs  v0.1-architecture.rs
scripts/: bundle-macos.sh  create-dmg.sh  doctor-mac.sh  install.sh  package.sh  sign-and-notarize.sh
website/: CNAME  Cargo.toml  Dioxus.toml
(+283 files in other folders)
