[package]
name = "vmux_history_poc"
description = "Minimal Bevy + CEF + Dioxus POC (history host message bridge)"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = ["bevy_cef/debug"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "vmux_history_poc"
path = "src/main.rs"

[build-dependencies]
vmux_utils = { path = "../vmux_utils" }

[dependencies]
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_ecs = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
bevy_remote = { version = "0.18", default-features = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
