[package]
name = "vmux_input"
description = "vmux — leafwing input, quit shortcuts, and tmux-style chord scheduling"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
vmux_layout = { path = "../vmux_layout" }
